--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Poppins:ital,wght@0,400;0,600;1,600&family=Roboto:wght@400;500;700&display=swap');
 @import './slick-slider.css';
 @import './auth.css';
 
@@ -11,16 +11,12 @@
 
 html {
     background-color: #020100;
-    width: 100%;
-    height: 100%;
     color: #fff;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
-    width: 100%;
     line-height: inherit;
-    height: 100%;
     font-weight: 400;
     background-color: #020100;
     scrollbar-width: thin;
@@ -343,7 +339,7 @@ fieldset {
     color: #92929D;
 }
 
-.home .privacy-and-policy-agreement {
+.privacy-and-policy-agreement {
     position: absolute;
     top: 25px;
     margin: 0 auto;
@@ -358,18 +354,18 @@ fieldset {
     box-shadow: 0px 0px 20px 5px #000000;
 }
 
-.home .privacy-and-policy-agreement .heading {
+.privacy-and-policy-agreement .heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.home .privacy-and-policy-agreement .heading .close-modal {
+.privacy-and-policy-agreement .heading .close-modal {
     fill: #1E75FF;
     cursor: pointer;
 }
 
-.home .privacy-and-policy-agreement .agreement {
+.privacy-and-policy-agreement .agreement {
     font-size: 14px;
     font-family: Roboto, sans-serif;
     line-height: 30px;
@@ -377,21 +373,21 @@ fieldset {
     color: #B5B5BE;
 }
 
-.home .privacy-and-policy-agreement .agreement .advise {
+.privacy-and-policy-agreement .agreement .advise {
     margin-top: 25px;
     display: inline-block;
 }
 
-.home .privacy-and-policy-agreement .agreement .term {
+.privacy-and-policy-agreement .agreement .term {
     margin-top: 15px;
 }
 
-.home .privacy-and-policy-agreement .agreement .term h3 {
+.privacy-and-policy-agreement .agreement .term h3 {
     font-size: 14px;
     font-weight: 400;
 }
 
-.home .privacy-and-policy-agreement .agreement .term .rules {
+.privacy-and-policy-agreement .agreement .term .rules {
     list-style-type: none;
 }
 
@@ -1481,7 +1477,6 @@ fieldset {
 
 .dashboard .main .products {
     margin-top: 60px;
-    padding-bottom: 60px;
 }
 
 .dashboard .main .products .container {
@@ -1501,10 +1496,6 @@ fieldset {
     margin: 150px auto 60px auto;
     position: relative;
     flex-basis: 32%;
-}
-
-.dashboard .main .products .product:nth-last-child(-n+3) {
-    margin: 150px auto 0 auto;
 }
 
 .dashboard .main .products .product .cover {
@@ -1688,7 +1679,6 @@ fieldset {
 
 .dashboard .main .product-info .product .title {
     font-size: 24px;
-    text-align: center;
     font-weight: 600;
     line-height: 36px;
 }
@@ -2072,10 +2062,273 @@ fieldset {
 .dashboard .main .subscriptions .container {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 60px;
 }
 
 .dashboard .main .subscriptions .all-subscriptions {
+    width: calc(770px - 30px);
+}
+
+.dashboard .main .subscriptions .all-subscriptions .active-subs-title {
+    font-weight: 600;
+    line-height: 36px;
+    font-size: 24px;
+    color: #FAFAFB;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription {
+    margin-top: 30px;
+    display: flex;
+    background-color: #1C1C24;
+    border-radius: 10px;
+    height: 177px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .subscription-icon {
+    min-width: 175px;
+    height: 175px;
+    border-radius: 10px;
+    border: 3px solid #44f;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content {
     width: 100%;
+    padding: 20px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .sub-title {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: .1px;
+    font-weight: 600;
+    color: #FAFAFB;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .overdue {
+    font-family: Roboto, sans-serif;
+    color: #B5B5BE;
+    line-height: 24px;
+    font-size: 14px;
+    letter-spacing: .1px;
+    display: flex;
+    margin-top: 10px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .active-until {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 24px;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    color: #B5B5BE;
+    letter-spacing: .1px;
+    display: flex;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content {
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: .1px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .status.active {
+    color: #1E75FF;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .product-info {
+    color: #FAFAFB;
+    text-decoration: none;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .status.freezed {
+    color: #1E75FF;
+    mix-blend-mode: luminosity;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons {
+    display: flex;
+    margin-top: 15px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons .button {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    padding: 10px 0;
+    width: 170px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #FAFAFB;
+    border: 1px solid rgba(255, 255, 255, .1);
+    background: transparent;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons .button + .button {
+    margin-left: 30px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .buttons .button:first-of-type {
+    border: none;
+    background-color: #1E75FF;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content.expired .buttons .button:first-of-type {
+    background-color: #FC5A5A;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content.freezed .buttons .button:first-of-type {
+    background-color: #1E75FF;
+    mix-blend-mode: luminosity;
+    color: #FAFAFB;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content.freezed .buttons .button {
+    background: transparent;
+    border: 1px solid #1E75FF;
+    color: #1E75FF;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .product-info {
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: #292932;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-family: Poppins, sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    margin: 0;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .overdue-sub-title {
+    margin-top: 50px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .status.payment-required {
+    color: #FC5A5A;
+}
+
+.dashboard .main .subscriptions .activate-product {
+    width: 370px;
+    padding: 25px 20px;
+    background-color: #1C1C24;
+    border: 2px solid #1E75FF;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 370px;
+    margin-top: 57px;
+}
+
+.dashboard .main .subscriptions .activate-product h2 {
+    text-align: center;
+    color: #1E75FF;
+    text-transform: uppercase;
+    font-size: Roboto, sans-serif;
+    font-size: 14px;
+    letter-spacing: .1px;
+    font-weight: 400;
+}
+
+.dashboard .main .subscriptions .activate-product .activate-product-label {
+    font-size: 24px;
+    line-height: 36px;
+    color: #FAFAFB;
+    letter-spacing: .1px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.dashboard .main .subscriptions .activate-product .field-wrap {
+    position: relative;
+    margin-top: 20px;
+    z-index: 2;
+}
+
+.dashboard .main .subscriptions .activate-product .field-wrap .activate-key {
+    padding: 15px;
+    background-color: #292932;
+    border-radius: 10px;
+    width: 100%;
+    border: none;
+    color: #FAFAFB;
+    border: 1px solid transparent;
+}
+
+.dashboard .main .subscriptions .activate-product .field-wrap .activate-key:focus,
+.dashboard .main .subscriptions .activate-product .field-wrap .activate-key:valid {
+    background: transparent;
+    border: 1px solid #92929D;
+}
+
+.dashboard .main .subscriptions .activate-product .field-wrap .activate-key:focus + label ,
+.dashboard .main .subscriptions .activate-product .field-wrap .activate-key:valid + label {
+    transform: translateY(-23px);
+    padding: 0 10px;
+    background: #1C1C24;
+    height: 19px;
+}
+
+.dashboard .main .subscriptions .activate-product .field-wrap label {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    display: flex;
+    align-items: center;
+    left: 15px;
+    pointer-events: none;
+    color: #92929D;
+    z-index: 1;
+    transition: 300ms;
+    background: transparent;
+}
+
+.dashboard .main .subscriptions .activate-product .activate {
+    margin-top: 20px;
+    padding: 15px 0;
+    background-color: #1E75FF;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    color: #FAFAFB;
+}
+
+.dashboard .main .subscriptions .activate-product .terms {
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    color: #92929D;
+    margin-top: 15px;
+}
+
+.dashboard .main .subscriptions .activate-product .terms .terms-n-policy {
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #92929D;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #92929D;
+    cursor: pointer;
 }
 
 .dashboard .main .FAQ .search-bar {
