--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1695,8 +1695,7 @@ fieldset {
 .dashboard .main {
     min-height: 85vh;
     background: #13131A;
-    margin-top: 30px;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .dashboard .main .lobby a {
@@ -2108,6 +2107,7 @@ fieldset {
     line-height: 24px;
     font-weight: 600;
     letter-spacing: .1px;
+    color: #FAFAFB;
 }
 
 .dashboard .main .products .product .description {
@@ -2120,7 +2120,7 @@ fieldset {
 }
 
 .dashboard .main .products .product .buttons {
-    margin-top: 30px;
+    margin-top: 23px;
     display: flex;
     justify-content: space-between;
     font-size: 12px;
@@ -2141,7 +2141,6 @@ fieldset {
     display: flex;
     justify-content: center;
     color: #FAFAFB;
-    font-family: Roboto, sans-serif;
     line-height: 18px;
     cursor: pointer;
     border: none;
@@ -2179,7 +2178,7 @@ fieldset {
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown {
-    width: 250px;
+    width: 200px;
     cursor: pointer;
     position: relative;
     user-select: none;
@@ -2198,12 +2197,13 @@ fieldset {
     align-items: center;
     font-size: 12px;
     font-weight: 600;
+    line-height: 18px;
     letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .info .general .cost .calc-cost .calculated-time .dropdown-arrow {
-    height: 7px;
-    width: 10px;
+    height: 5px;
+    width: 8px;
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown .items {
@@ -2226,6 +2226,14 @@ fieldset {
     font-size: 12px;
     font-weight: 600;
     letter-spacing: .1px;
+}
+
+.dashboard .main .product-info .info .general .cost .dropdown .items .item:first-of-type {
+    padding-top: 20px;
+}
+
+.dashboard .main .product-info .info .general .cost .dropdown .items .item:last-of-type {
+    padding-bottom: 15px;
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown .items .item .cost-selected {
@@ -2273,6 +2281,8 @@ fieldset {
     font-size: 24px;
     font-weight: 600;
     line-height: 36px;
+    color: #FAFAFB;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .product .bought-people {
@@ -2346,18 +2356,18 @@ fieldset {
 }
 
 .dashboard .main .product-info .product .main .actions .undetect {
-    background-color: rgba(76, 119, 30, .5);
+    background-color: #82C43C26;
     border: none;
     padding: 10px 20px;
     color: #82C43C;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
-    display: flex;
     align-items: center;
     width: 160px;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 12px;
+    line-height: 18px;
 }
 
 .dashboard .main .product-info .product .main .actions .undetect .ellipse {
@@ -2375,6 +2385,8 @@ fieldset {
     color: #92929D;
     line-height: 16px;
     font-size: 14px;
+    letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
 }
 
 .dashboard .main .product-info .product .main .actions .last-update .circle {
@@ -2385,11 +2397,20 @@ fieldset {
     margin: 0 5px;
 }
 
+.dashboard .main .product-info .product .main .actions .last-update .current-version {
+    font-weight: 500;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: .1px;
+}
+
 .dashboard .main .product-info .product .general .description h4 {
     font-size: 16px;
     color: #FAFAFB;
     font-weight: 600;
     line-height: 24px;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .product .general p {
@@ -2401,11 +2422,14 @@ fieldset {
     font-family: Roboto, sans-serif;
 }
 
+.dashboard .main .product-info .product .general .characteristics {
+    margin-top: 60px;
+}
+
 .dashboard .main .product-info .product .general .characteristics h4 {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: .1px;
-    margin-top: 100px;
     font-weight: 600;
 }
 
@@ -2431,12 +2455,17 @@ fieldset {
     width: 50%;
     font-size: 14px;
     letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
+    line-height: 16px;
+    color: #fff;
 }
 
 .dashboard .main .product-info .product .general .characteristics ul .characteristic .value {
     color: #B5B5BE;
     font-size: 14px;
-
+    line-height: 16px;
+    letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
 }
 
 .dashboard .main .product-info .product .general .cost {
@@ -2461,11 +2490,11 @@ fieldset {
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
-    width: 150px;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .product .general .cost .button {
-    width: 20%;
+    width: 160px;
     border-radius: 10px;
 }
 
@@ -2507,12 +2536,15 @@ fieldset {
 .dashboard .main .product-info .info .changes .change .general {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .dashboard .main .product-info .info .changes .change .general .version {
     color: #50B5FF;
     font-size: 14px;
     letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
+    line-height: 16px;
 }
 
 .dashboard .main .product-info .info .changes .change .general .created {
@@ -2520,16 +2552,18 @@ fieldset {
     font-size: 14px;
     line-height: 28px;
     font-family: 'Roboto', sans-serif;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .info .changes .change .description {
-    margin-top: 25px;
-    line-height: 35px;
-    padding-bottom: 25px;
+    margin-top: 20px;
+    padding-bottom: 20px;
     border-bottom: 1px solid #292932;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 28px;
     font-family: 'Roboto', sans-serif;
+    letter-spacing: .1px;
+    color: #fff;
 }
 
 .dashboard .main .product-info .info .changes .change:last-child .description {
@@ -2543,14 +2577,15 @@ fieldset {
 
 .dashboard .main .product-info .info .changes .show-all .show-more {
     padding: 10px 0;
-    width: 20%;
+    width: 160px;
     border-radius: 10px;
     border: 1px solid #292932;
     background: transparent;
     color: #FAFAFB;
     font-weight: 600;
     cursor: pointer;
-    font-size: .9rem;
+    font-size: 12px;
+    line-height: 18px;
     transition: 200ms;
 }
 
@@ -2562,7 +2597,8 @@ fieldset {
 .dashboard .main .product-info .info .changes .show-all .how-many-shown {
     margin-left: 30px;
     color: #B5B5BE;
-    font-size: .9rem;
+    font-size: 12px;
+    line-height: 18px;
 }
 
 .dashboard .main .product-info .popular-products {
@@ -2650,7 +2686,7 @@ fieldset {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 180px;
+    margin-top: 198px;
 }
 
 .dashboard .main .subscriptions .container {
@@ -2668,6 +2704,7 @@ fieldset {
     line-height: 36px;
     font-size: 24px;
     color: #FAFAFB;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription {
@@ -2687,7 +2724,7 @@ fieldset {
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content {
     width: 100%;
-    padding: 20px;
+    padding: 20px 20px 20px 30px;
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content .sub-title {
@@ -2713,7 +2750,6 @@ fieldset {
     font-size: 14px;
     line-height: 24px;
     font-family: Roboto, sans-serif;
-    font-weight: 400;
     color: #B5B5BE;
     letter-spacing: .1px;
     display: flex;
@@ -2721,7 +2757,6 @@ fieldset {
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content {
     font-family: Roboto, sans-serif;
-    font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: .1px;
@@ -2757,6 +2792,7 @@ fieldset {
     font-size: 12px;
     line-height: 18px;
     padding: 10px 0;
+    font-family: Poppins, sans-serif;
     width: 170px;
     border: none;
     border-radius: 10px;
@@ -2792,8 +2828,8 @@ fieldset {
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .product-info {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     border-radius: 10px;
     background-color: #292932;
     display: flex;
@@ -2802,16 +2838,54 @@ fieldset {
     cursor: pointer;
     font-family: Poppins, sans-serif;
     font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
     font-style: italic;
     margin: 0;
 }
 
 .dashboard .main .subscriptions .all-subscriptions .overdue-sub-title {
     margin-top: 50px;
+    color: #FAFAFB;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    font-weight: 600;
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .content .status-content .status.payment-required {
     color: #FC5A5A;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .show-all {
+    margin-top: 40px;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .show-all .show {
+    background: transparent;
+    border: 1px solid #292932;
+    border-radius: 10px;
+    width: 170px;
+    padding: 10px 0;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    color: #FAFAFB;
+    cursor: pointer;
+    transition: 200ms;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .show-all .show:hover {
+    background-color: #FAFAFB;
+    color: #000;
+}
+
+.dashboard .main .subscriptions .all-subscriptions .show-all label {
+    color: #B5B5BE;
+    font-size: 12px;
+    line-height: 18px;
+    cursor: text;
+    margin-left: 30px;
 }
 
 .dashboard .main .subscriptions .activate-product {
@@ -2823,26 +2897,28 @@ fieldset {
     display: flex;
     flex-direction: column;
     height: 370px;
-    margin-top: 57px;
+    margin-top: 67px;
 }
 
 .dashboard .main .subscriptions .activate-product h2 {
     text-align: center;
     color: #1E75FF;
     text-transform: uppercase;
-    font-size: Roboto, sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 14px;
-    letter-spacing: .1px;
+    letter-spacing: 1px;
     font-weight: 400;
+    line-height: 16px;
 }
 
 .dashboard .main .subscriptions .activate-product .activate-product-label {
     font-size: 24px;
-    line-height: 36px;
+    line-height: 32px;
     color: #FAFAFB;
     letter-spacing: .1px;
     text-align: center;
     font-weight: 600;
+    margin-top: 10px;
 }
 
 .dashboard .main .subscriptions .activate-product .field-wrap {
@@ -2886,8 +2962,12 @@ fieldset {
     pointer-events: none;
     color: #92929D;
     z-index: 1;
-    transition: 300ms;
+    transition: padding 300ms, transform 300ms;
     background: transparent;
+    font-size: 14px;
+    font-family: Roboto, sans-serif;
+    line-height: 16px;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .subscriptions .activate-product .activate {
@@ -2905,7 +2985,6 @@ fieldset {
 
 .dashboard .main .subscriptions .activate-product .terms {
     font-family: Roboto, sans-serif;
-    font-weight: 400;
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -2923,6 +3002,14 @@ fieldset {
     border: none;
     border-bottom: 1px solid #92929D;
     cursor: pointer;
+}
+
+.dashboard .main .FAQ h2 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    color: #FAFAFB;
 }
 
 .dashboard .main .FAQ .search-bar {
@@ -2948,9 +3035,12 @@ fieldset {
     padding: 10px;
     background-color: #44444F;
     border-radius: 7px;
-    font-size: .85rem;
+    font-size: 12px;
+    font-family: Roboto, sans-serif;
     justify-content: space-between;
     user-select: none;
+    letter-spacing: .09px;
+    line-height: 14px;
 }
 
 .dashboard .main .FAQ .search-bar .categories .first-category .category {
@@ -2963,11 +3053,15 @@ fieldset {
     border: none;
     color: #696974;
     width: 100%;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .FAQ .search-bar .categories .first-category .arrow {
     margin-left: 10px;
     width: 8px;
+    height: 5px;
 }
 
 .dashboard .main .FAQ .search-bar .categories .the-rest-categories {
@@ -2997,8 +3091,8 @@ fieldset {
 }
 
 .dashboard .main .FAQ .search-bar .search-icon {
-    width: 10%;
-    height: 50%;
+    width: 44px;
+    height: 40px;
     cursor: pointer;
     border-radius: 10px;
     padding: 10px;
@@ -3017,15 +3111,19 @@ fieldset {
 }
 
 .dashboard .main .FAQ .answers-arrow {
-    height: 15px;
+    height: 16px;
+    width: 10px;
     transition: 200ms;
 }
 
 .dashboard .main .FAQ .title {
-    font-size: 1.1rem;
     font-weight: 600;
-    margin-left: 15px;
+    margin-left: 11px;
     width: auto;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: .1px;
+    margin-top: 1px;
 }
 
 .dashboard .main .FAQ .answer-title .gray-line {
@@ -3067,13 +3165,16 @@ fieldset {
 
 .dashboard .main .FAQ .answers .answer .answer-to-question {
     color: #92929D;
-    font-size: .9rem;
-    margin-top: 5px;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
+    margin-top: 1px;
 }
 
 .dashboard .main .FAQ .answers .answer .answer-title {
     line-height: 27px;
-    font-size: 1.3rem;
+    font-size: 18px;
     font-weight: 600;
     cursor: text;
 }
@@ -3086,8 +3187,10 @@ fieldset {
 }
 
 .dashboard .main .FAQ .answers .answer .answer-rate .useful-rate {
-    font-size: .725rem;
-    color: #92929D;
+    font-size: 12px;
+    font-family: Roboto, sans-serif;
+    line-height :14px;
+    color: #fff;
 }
 
 .dashboard .main .FAQ .answers .answer .answer-rate .useful-rate .bar {
@@ -3124,14 +3227,17 @@ fieldset {
 }
 
 .dashboard .main .FAQ .answers .people-percent .rate-answer {
-    width: 40%;
     border: 1px solid #B5B5BE;
     border-radius: 5px;
     background: transparent;
-    color: #fff;
+    color: #FAFAFB;
     cursor: pointer;
-    width: 40%;
+    width: 100px;
+    padding: 6px 0;
     transition: 200ms;
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 500;
 }
 
 .dashboard .main .FAQ .answers .people-percent .rate-answer:hover {
@@ -3140,10 +3246,11 @@ fieldset {
 }
 
 .dashboard .main .FAQ .answers .people-percent .percent {
-    font-size: .8rem;
+    font-size: 12px;
+    line-height: 14px;
     font-weight: 500;
     color: #92929D;
-    width: 50%;
+    width: 110px;
 }
 
 .dashboard .main .FAQ .answers .answer {
